BUGFIX aumentato z-index di end -game

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ main{
     position:absolute;
     top: 0;
     left: 0;
-    background-color: rgb(187, 187, 187);
+    background-color: rgb(142, 142, 142);
     width: 100%;
     border: 2px solid rgb(227, 227, 227);
     height: 50%;
@@ -135,7 +135,7 @@ main{
     position:absolute;
     bottom: 0;
     right: 0;
-    background-color: rgb(187, 187, 187);
+    background-color: rgb(142, 142, 142);
     width: 100%;
     height: 50%;
     transform: rotate(180deg);
@@ -186,6 +186,7 @@ main{
 .end-game{
     display: none;
     position: absolute;
+    z-index: 2;
     top: 0;
     left: 0;
     width: 100%;
